--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-﻿/*=============================================================
+/*=============================================================
     Authour URI: www.binarytheme.com
     License: Commons Attribution 3.0
 
@@ -235,6 +235,56 @@ border: none;
 font-weight: 900;
 font-size: 30px;
 }
+
+
+/*=======================================
+    Trial STYLES
+==================================================*/
+
+
+.trial {
+    background: #eef1f3;
+    padding: 0 0 15px 0;
+    margin: 30px 0px;
+    list-style: none;
+    text-align: center;
+  
+    -webkit-transition: all 0.2s ease;
+       -moz-transition: all 0.2s ease;
+         -o-transition: all 0.2s ease;
+            transition: all 0.2s ease;
+}
+
+
+
+.trial li {
+    padding: 15px 0px;
+	font-weight:600;
+    color: #434749;
+    border-top: 1px dashed #000;
+}
+
+.trial li.plan-head {
+   padding: 15px 0px;
+background-color: #000000;
+color: #FFFFFF;
+line-height: 20px;
+font-size: 20px;
+font-weight: 600;
+border: none;
+   }
+
+.trial li.main-price {
+   padding: 25px 0px;
+   text-align:center;
+background-color: #357ebd;
+border-color:black;
+color: #000000;
+border: none;
+font-weight: 900;
+font-size: 30px;
+}
+
 
 /*=======================================
     SERVICE STYLES
