--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,10 +36,11 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-    line-height:40px;
+    line-height:100px;
     font-weight:900;
     font-size:40px;
     padding:50px 50px 50px 20px;
+	margin-top: 50px;
 }
 h3 {
     line-height:30px;
